--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -23,12 +23,6 @@
                 Opacity="0" />
         </Grid>
         <win2d:CanvasControl x:Name="D2dCanvas" />
-        <win2d:CanvasControl
-            x:Name="D2dCanvasThumbNail"
-            Width="Auto"
-            Height="40"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Bottom" />
         <Border
             x:Name="BorderTxtZoom"
             Padding="10,5,10,5"
@@ -48,140 +42,143 @@
                 Foreground="White"
                 Text="" />
         </Border>
-        <Border
-            x:Name="BorderTxtFileName"
-            Margin="0,0,0,87"
-            Padding="10,5,10,5"
-            HorizontalAlignment="Center"
+        <StackPanel
+            HorizontalAlignment="Stretch"
             VerticalAlignment="Bottom"
-            Background="#44000000"
-            CornerRadius="5">
-            <TextBlock
-                x:Name="TxtFileName"
-                Width="Auto"
-                Height="Auto"
+            Orientation="Vertical"
+            Spacing="5">
+            <Border
+                x:Name="BorderTxtFileName"
+                Padding="10,5,10,5"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                FontSize="12"
-                Foreground="{ThemeResource TextFillColorPrimaryBrush}" />
-        </Border>
-        <Border
-            x:Name="BorderButtonPanel"
-            Margin="0,0,0,45"
-            Padding="5"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Bottom"
-            Background="#44000000"
-            CornerRadius="5">
-            <StackPanel
-                x:Name="ButtonPanel"
-                Width="Auto"
-                Height="Auto"
+                VerticalAlignment="Bottom"
+                Background="#44000000"
+                CornerRadius="5">
+                <TextBlock
+                    x:Name="TxtFileName"
+                    Width="Auto"
+                    Height="Auto"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="12"
+                    Foreground="{ThemeResource TextFillColorPrimaryBrush}" />
+            </Border>
+            <Border
+                x:Name="BorderButtonPanel"
+                Padding="5"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Orientation="Horizontal">
-                <RepeatButton
-                    x:Name="ButtonBack"
+                VerticalAlignment="Bottom"
+                Background="#44000000"
+                CornerRadius="5">
+                <StackPanel
+                    x:Name="ButtonPanel"
                     Width="Auto"
-                    Click="ButtonBack_OnClick"
-                    Content="&#xE96f;"
-                    FontFamily="{StaticResource FluentIcons}"
-                    FontSize="16"
-                    PointerWheelChanged="ButtonBackNext_PointerWheelChanged">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Back"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </RepeatButton>
-                <RepeatButton
-                    x:Name="ButtonRotate"
-                    Width="Auto"
-                    Click="ButtonRotate_OnClick"
-                    Content="&#xE89E;"
-                    FontFamily="{StaticResource FluentIcons}"
-                    FontSize="16"
-                    PointerWheelChanged="ButtonRotate_PointerWheelChanged">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Rotate"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </RepeatButton>
-                <RepeatButton
-                    x:Name="ButtonNext"
-                    Width="Auto"
-                    Margin="0,0,10,0"
-                    Click="ButtonNext_OnClick"
-                    Content="&#xE970;"
-                    FontFamily="{StaticResource FluentIcons}"
-                    FontSize="16"
-                    PointerWheelChanged="ButtonBackNext_PointerWheelChanged">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Next"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </RepeatButton>
-                <Button
-                    x:Name="ButtonScaleSet"
-                    Width="Auto"
-                    Click="ButtonScaleSet_Click"
-                    Content="&#xE9A6;"
-                    FontFamily="{StaticResource FluentIcons}"
-                    FontSize="16">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Fit to display area"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </Button>
-                <Button
-                    x:Name="ButtonOneIsToOne"
-                    Width="Auto"
-                    Height="{Binding ElementName=ButtonScaleSet, Path=ActualHeight}"
-                    Click="ButtonOneIsToOne_Click"
-                    Content="1:1"
-                    FontSize="12">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Zoom to 1:1"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </Button>
-                <Button
-                    x:Name="ButtonSettings"
-                    Width="Auto"
-                    Click="ButtonSettings_OnClick"
-                    Content="&#xE713;"
-                    FontFamily="{StaticResource FluentIcons}"
-                    FontSize="16">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Settings"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </Button>
-                <Button
-                    x:Name="ButtonHelp"
-                    Width="Auto"
-                    Content="🆘"
-                    FontSize="16"
-                    Visibility="Collapsed">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="Help"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                </Button>
-                <!--<Button
+                    Height="Auto"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal">
+                    <RepeatButton
+                        x:Name="ButtonBack"
+                        Width="Auto"
+                        Click="ButtonBack_OnClick"
+                        Content="&#xE96f;"
+                        FontFamily="{StaticResource FluentIcons}"
+                        FontSize="16"
+                        PointerWheelChanged="ButtonBackNext_PointerWheelChanged">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Back"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </RepeatButton>
+                    <RepeatButton
+                        x:Name="ButtonRotate"
+                        Width="Auto"
+                        Click="ButtonRotate_OnClick"
+                        Content="&#xE89E;"
+                        FontFamily="{StaticResource FluentIcons}"
+                        FontSize="16"
+                        PointerWheelChanged="ButtonRotate_PointerWheelChanged">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Rotate"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </RepeatButton>
+                    <RepeatButton
+                        x:Name="ButtonNext"
+                        Width="Auto"
+                        Margin="0,0,10,0"
+                        Click="ButtonNext_OnClick"
+                        Content="&#xE970;"
+                        FontFamily="{StaticResource FluentIcons}"
+                        FontSize="16"
+                        PointerWheelChanged="ButtonBackNext_PointerWheelChanged">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Next"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </RepeatButton>
+                    <Button
+                        x:Name="ButtonScaleSet"
+                        Width="Auto"
+                        Click="ButtonScaleSet_Click"
+                        Content="&#xE9A6;"
+                        FontFamily="{StaticResource FluentIcons}"
+                        FontSize="16">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Fit to display area"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </Button>
+                    <Button
+                        x:Name="ButtonOneIsToOne"
+                        Width="Auto"
+                        Height="{Binding ElementName=ButtonScaleSet, Path=ActualHeight}"
+                        Click="ButtonOneIsToOne_Click"
+                        Content="1:1"
+                        FontSize="12">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Zoom to 1:1"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </Button>
+                    <Button
+                        x:Name="ButtonSettings"
+                        Width="Auto"
+                        Click="ButtonSettings_OnClick"
+                        Content="&#xE713;"
+                        FontFamily="{StaticResource FluentIcons}"
+                        FontSize="16">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Settings"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </Button>
+                    <Button
+                        x:Name="ButtonHelp"
+                        Width="Auto"
+                        Content="🆘"
+                        FontSize="16"
+                        Visibility="Collapsed">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="Help"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                    </Button>
+                    <!--<Button
                 x:Name="ButtonCoffee"
                 Width="Auto"
                 Click="ButtonCoffee_OnClick"
@@ -196,33 +193,41 @@
                         Placement="Right" />
                 </ToolTipService.ToolTip>
             </Button>-->
-                <Button
-                    x:Name="ButtonExpander"
-                    Width="Auto"
-                    Click="ButtonExpander_Click">
-                    <ToolTipService.ToolTip>
-                        <ToolTip
-                            AutomationProperties.FullDescription="Non-occluding tooltip"
-                            Content="View Cache Status"
-                            Placement="Right" />
-                    </ToolTipService.ToolTip>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock
-                            x:Name="IconExpander"
-                            Width="Auto"
-                            Margin="3,0,0,0"
-                            FontFamily="{StaticResource FluentIcons}"
-                            FontSize="16"
-                            Text="&#xE761;" />
-                        <TextBlock
-                            x:Name="CacheStatusProgress"
-                            Width="Auto"
-                            Margin="10,0,0,0"
-                            FontSize="12"
-                            Visibility="Collapsed" />
-                    </StackPanel>
-                </Button>
-            </StackPanel>
-        </Border>
+                    <Button
+                        x:Name="ButtonExpander"
+                        Width="Auto"
+                        Click="ButtonExpander_Click">
+                        <ToolTipService.ToolTip>
+                            <ToolTip
+                                AutomationProperties.FullDescription="Non-occluding tooltip"
+                                Content="View Cache Status"
+                                Placement="Right" />
+                        </ToolTipService.ToolTip>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock
+                                x:Name="IconExpander"
+                                Width="Auto"
+                                Margin="3,0,0,0"
+                                FontFamily="{StaticResource FluentIcons}"
+                                FontSize="16"
+                                Text="&#xE761;" />
+                            <TextBlock
+                                x:Name="CacheStatusProgress"
+                                Width="Auto"
+                                Margin="10,0,0,0"
+                                FontSize="12"
+                                Visibility="Collapsed" />
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+            </Border>
+            <win2d:CanvasControl
+                x:Name="D2dCanvasThumbNail"
+                Width="Auto"
+                Height="40"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom" />
+        </StackPanel>
+
     </Grid>
 </Window>
