--- a/Src/FlyPhotos/Views/InitWindow.xaml
+++ b/Src/FlyPhotos/Views/InitWindow.xaml
@@ -20,6 +20,7 @@
                 Height="150"
                 Margin="0,30,0,0"
                 AllowDrop="True"
+                Background="Transparent"
                 DragOver="DropArea_DragOver"
                 Drop="DropArea_Drop">
                 <Grid>
