--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -123,7 +123,7 @@
                                 Placement="Right" />
                         </ToolTipService.ToolTip>
                     </RepeatButton>
-                    <Button
+                    <ToggleButton
                         x:Name="ButtonScaleSet"
                         Width="Auto"
                         Click="ButtonScaleSet_Click"
@@ -136,8 +136,8 @@
                                 Content="Fit to display area"
                                 Placement="Right" />
                         </ToolTipService.ToolTip>
-                    </Button>
-                    <Button
+                    </ToggleButton>
+                    <ToggleButton
                         x:Name="ButtonOneIsToOne"
                         Width="Auto"
                         Height="{Binding ElementName=ButtonScaleSet, Path=ActualHeight}"
@@ -150,7 +150,7 @@
                                 Content="Zoom to 1:1"
                                 Placement="Right" />
                         </ToolTipService.ToolTip>
-                    </Button>
+                    </ToggleButton>
                     <Button
                         x:Name="ButtonSettings"
                         Width="Auto"
