--- a/Src/FlyPhotos/Views/Settings.xaml
+++ b/Src/FlyPhotos/Views/Settings.xaml
@@ -289,6 +289,52 @@
                             HeaderIcon="{ui:FontIcon Glyph=&#xE74D;}">
                             <ToggleSwitch x:Name="ButtonConfirmBeforeDelete" />
                         </controls:SettingsCard>
+                        <controls:SettingsExpander
+                            x:Name="SettingsCardExternalShorcuts"
+                            Margin="0,5,0,0"
+                            Description="Open the current photo in other apps"
+                            Header="Show Shortcuts to external apps"
+                            HeaderIcon="{ui:FontIcon Glyph=&#xE8A7;}">
+                            <ToggleSwitch x:Name="ButtonEnableExternalShortcut" HorizontalAlignment="Right" />
+                            <controls:SettingsExpander.Items>
+                                <controls:SettingsCard
+                                    x:Name="SettingsCardExternalApps"
+                                    Description="Browse exes to add as shortcuts."
+                                    Header="Select external apps"
+                                    IsEnabled="{x:Bind ButtonEnableExternalShortcut.IsOn, Mode=OneWay}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button
+                                            x:Name="BtnShortcut1"
+                                            Height="50"
+                                            Margin="2"
+                                            Click="OnShortcutButtonClick">
+                                            <FontIcon Glyph="&#xE8E5;" />
+                                        </Button>
+                                        <Button
+                                            x:Name="BtnShortcut2"
+                                            Height="50"
+                                            Margin="2"
+                                            Click="OnShortcutButtonClick">
+                                            <FontIcon Glyph="&#xE8E5;" />
+                                        </Button>
+                                        <Button
+                                            x:Name="BtnShortcut3"
+                                            Height="50"
+                                            Margin="2"
+                                            Click="OnShortcutButtonClick">
+                                            <FontIcon Glyph="&#xE8E5;" />
+                                        </Button>
+                                        <Button
+                                            x:Name="BtnShortcut4"
+                                            Height="50"
+                                            Margin="2"
+                                            Click="OnShortcutButtonClick">
+                                            <FontIcon Glyph="&#xE8E5;" />
+                                        </Button>
+                                    </StackPanel>
+                                </controls:SettingsCard>
+                            </controls:SettingsExpander.Items>
+                        </controls:SettingsExpander>
                         <TextBlock
                             Margin="0,20,0,0"
                             Style="{StaticResource BodyStrongTextBlockStyle}"
