--- a/Src/FlyPhotos/Views/Settings.xaml
+++ b/Src/FlyPhotos/Views/Settings.xaml
@@ -273,22 +273,6 @@
                                 </controls:SettingsCard>
                             </controls:SettingsExpander.Items>
                         </controls:SettingsExpander>
-                        <controls:SettingsCard
-                            x:Name="SettingsCardShowFileName"
-                            Margin="0,5,0,0"
-                            Description="Display file name of currently opened file"
-                            Header="Show file name on screen"
-                            HeaderIcon="{ui:FontIcon Glyph=&#xED1E;}">
-                            <ToggleSwitch x:Name="ButtonShowFileName" />
-                        </controls:SettingsCard>
-                        <controls:SettingsCard
-                            x:Name="SettingsCardConfirmBeforeDelete"
-                            Margin="0,5,0,0"
-                            Description="Ask for confirmation before deleting any file."
-                            Header="Show confirmation dialog for file delete"
-                            HeaderIcon="{ui:FontIcon Glyph=&#xE74D;}">
-                            <ToggleSwitch x:Name="ButtonConfirmBeforeDelete" />
-                        </controls:SettingsCard>
                         <controls:SettingsExpander
                             x:Name="SettingsCardExternalShorcuts"
                             Margin="0,5,0,0"
@@ -335,6 +319,29 @@
                                 </controls:SettingsCard>
                             </controls:SettingsExpander.Items>
                         </controls:SettingsExpander>
+                        <controls:SettingsCard
+                            x:Name="SettingsCardShowFileName"
+                            Margin="0,5,0,0"
+                            Description="Display file name of currently opened file"
+                            Header="Show file name on screen"
+                            HeaderIcon="{ui:FontIcon Glyph=&#xED1E;}">
+                            <ToggleSwitch x:Name="ButtonShowFileName" />
+                        </controls:SettingsCard>
+                        <controls:SettingsCard
+                            x:Name="SettingsCardConfirmBeforeDelete"
+                            Margin="0,5,0,0"
+                            Description="Ask for confirmation before deleting any file."
+                            Header="Show confirmation dialog for file delete"
+                            HeaderIcon="{ui:FontIcon Glyph=&#xE74D;}">
+                            <ToggleSwitch x:Name="ButtonConfirmBeforeDelete" />
+                        </controls:SettingsCard>
+                        <controls:SettingsCard
+                            x:Name="SettingsCardShowCacheStatusExpander"
+                            Description="Show cache status expander in the button panel."
+                            Header="Show cache status"
+                            HeaderIcon="{ui:FontIcon Glyph=&#xED1E;}">
+                            <ToggleSwitch x:Name="ButtonShowCacheStatusExpander" />
+                        </controls:SettingsCard>
                         <TextBlock
                             Margin="0,20,0,0"
                             Style="{StaticResource BodyStrongTextBlockStyle}"
@@ -349,8 +356,7 @@
                                 <controls:SettingsCard
                                     x:Name="SettingsCardLowResCache"
                                     Description="Set the number of low-resolution photos cached on each side."
-                                    Header="Low-res cache"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xF16A;}">
+                                    Header="Low-res cache">
                                     <Slider
                                         x:Name="SliderLowResCacheSize"
                                         MinWidth="150"
@@ -363,8 +369,7 @@
                                 <controls:SettingsCard
                                     x:Name="SettingsCardHighResCache"
                                     Description="Set the number of high-resolution photos cached on each side."
-                                    Header="High-res cache"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xF16A;}">
+                                    Header="High-res cache">
                                     <Slider
                                         x:Name="SliderHighResCacheSize"
                                         MinWidth="150"
@@ -374,13 +379,7 @@
                                         StepFrequency="1"
                                         Value="2" />
                                 </controls:SettingsCard>
-                                <controls:SettingsCard
-                                    x:Name="SettingsCardShowCacheStatusExpander"
-                                    Description="Show cache status expander in the button panel."
-                                    Header="Show cache status"
-                                    HeaderIcon="{ui:FontIcon Glyph=&#xED1E;}">
-                                    <ToggleSwitch x:Name="ButtonShowCacheStatusExpander" />
-                                </controls:SettingsCard>
+
                             </controls:SettingsExpander.Items>
                         </controls:SettingsExpander>
                         <TextBlock
@@ -414,7 +413,7 @@
                     <controls:SettingsCard
                         x:Name="SettingsCardVersion"
                         Margin="0,5,0,0"
-                        Description="Current version is 2.5.8"
+                        Description="Current version is 2.5.9"
                         Header="Current Version"
                         HeaderIcon="{ui:FontIcon Glyph=&#xF133;}">
                         <HyperlinkButton Content="Check latest version" NavigateUri="https://github.com/riyasy/FlyPhotos/releases" />
